Feature: Put, Post, Get and Delete endpoints to deal with citizen addresses
